--- a/index.css
+++ b/index.css
@@ -34,16 +34,14 @@ body{
 }
 .choicebox{
     box-sizing: border-box;
-    display: inline-block;
-    width: 49%;
+    width: 50%;
     height: 80px;
     background-color: white;
     border: 1px solid black;
 }
 #computer-choice{
     position: relative;
-    /*top: -80px;
-    float: right;*/
+    float: right;
 }
 .choicebox p{
     width: 100%;
