--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     text-align: center;
+    font-family: sans-serif;
 }
 body{
     background-color: grey;
@@ -12,18 +13,23 @@ body{
     margin: auto;
 }
 .instructions{
-    margin-bottom: 10px;
+    margin: 10px 0 15px 0;
 }
 .buttons-wrapper{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
     width: 100%;
     margin-bottom: 15px;
-    text-align: center;
 }
 .button{
+    flex-grow: 1;
+    flex-basis: 0;
     box-sizing: border-box;
     color: white;
     background-color: blue;
     padding: 10px;
+    margin: 0 10px;
     cursor: pointer;
 }
 .button:hover{
@@ -59,13 +65,27 @@ body{
     margin-bottom: 10px;
     background-color: white;
 }
-.score{
-    margin-bottom: 10px;
+table{
+    width: 100%;
+    margin-bottom: 15px;
 }
-#score-label{
+th, td{
+    width: 48%;
+}
+.spacer{
     width: max-content;
-    margin: auto;
+}
+.table-left{
+    text-align: right;
+}
+.table-right{
+    text-align: left;
 }
 #reset-button{
-    visibility: hidden
+    visibility: hidden;
+    box-sizing: border-box;
+    color: white;
+    background-color: blue;
+    padding: 10px;
+    cursor: pointer;
 }
